# auth-service/src/main/java/pl/edu/pjatk/foodbook/authservice/rest/JwtLogoutHandler.java
@@ -8,6 +8,7 @@ import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.logout.LogoutHandler;
 import org.springframework.stereotype.Component;
 import pl.edu.pjatk.foodbook.authservice.rest.service.JwtTokenService;
+import pl.edu.pjatk.foodbook.authservice.security.JwtHelper;
 
 import java.io.IOException;
 
@@ -16,11 +17,12 @@ import java.io.IOException;
 public class JwtLogoutHandler implements LogoutHandler {
 
     private final JwtTokenService jwtService;
+    private final JwtHelper jwtHelper;
 
     @Override
     public void logout(HttpServletRequest request, HttpServletResponse response, Authentication authentication) {
         final String authHeader = request.getHeader("Authorization");
-        if (isAuthHeaderInvalid(authHeader)) {
+        if (jwtHelper.isAuthHeaderInvalid(authHeader)) {
             try {
                 response.sendError(401, "Unauthorized");
             } catch (IOException e) {
@@ -28,16 +30,10 @@ public class JwtLogoutHandler implements LogoutHandler {
             }
             return;
         }
-        String jwtToken = getJwtToken(authHeader);
-        jwtService.removeAll(jwtToken);
+        String jwtToken = jwtHelper.getJwtToken(authHeader);
+        String username = jwtHelper.extractUsername(jwtToken);
+        jwtService.revokeAllRefreshTokens(username);
         SecurityContextHolder.clearContext();
     }
 
-    private static String getJwtToken(String authHeader) {
-        return authHeader.substring(7);
-    }
-
-    private static boolean isAuthHeaderInvalid(String authHeader) {
-        return authHeader == null || !authHeader.startsWith("Bearer ");
-    }
 }
