# auth-service/src/main/java/pl/edu/pjatk/foodbook/authservice/rest/controller/AuthController.java
@@ -2,19 +2,18 @@ package pl.edu.pjatk.foodbook.authservice.rest.controller;
 
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
-import org.springframework.data.util.Pair;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
-import pl.edu.pjatk.foodbook.authservice.repository.model.AccessToken;
-import pl.edu.pjatk.foodbook.authservice.repository.model.RefreshToken;
 import pl.edu.pjatk.foodbook.authservice.rest.dto.AuthenticationRequest;
 import pl.edu.pjatk.foodbook.authservice.rest.dto.AuthenticationResponse;
 import pl.edu.pjatk.foodbook.authservice.rest.dto.RefreshTokenRequest;
 import pl.edu.pjatk.foodbook.authservice.rest.dto.RegisterRequest;
 import pl.edu.pjatk.foodbook.authservice.rest.service.AuthenticationService;
 import pl.edu.pjatk.foodbook.authservice.rest.service.JwtTokenService;
-import pl.edu.pjatk.foodbook.authservice.swagger.user.model.User;
 
+@Slf4j
 @RestController
 @RequestMapping("/api/v1/auth")
 @RequiredArgsConstructor
@@ -28,35 +27,34 @@ public class AuthController {
     public ResponseEntity<AuthenticationResponse> register(
         @RequestBody @Valid RegisterRequest request
     ) {
-        User registeredUser = authService.register(request);
-        Pair<AccessToken, RefreshToken> tokens = jwtService.generateTokens(registeredUser);
-        return ResponseEntity.ok(buildAuthenticationResponse(registeredUser, tokens));
+        String username = request.getUsername();
+        log.info("Request to register user with username {}", username);
+        authService.register(request);
+        AuthenticationResponse authenticationResponse = jwtService.generateTokens(username);
+        log.info("User with username {} registered successfully", username);
+        return new ResponseEntity<>(authenticationResponse, HttpStatus.CREATED);
     }
 
     @PostMapping("/authenticate")
     public ResponseEntity<AuthenticationResponse> authenticate(
         @RequestBody AuthenticationRequest request
     ) {
-        User authenticatedUser = authService.authenticate(request);
-        Pair<AccessToken, RefreshToken> tokens = jwtService.generateTokens(authenticatedUser);
-        return ResponseEntity.ok(buildAuthenticationResponse(authenticatedUser, tokens));
+        String username = request.getUsername();
+        log.info("Request to authenticate user with username {}", username);
+        authService.authenticate(request);
+        AuthenticationResponse authenticationResponse = jwtService.generateTokens(username);
+        log.info("User with username {} authenticated successfully", username);
+        return ResponseEntity.ok(authenticationResponse);
     }
 
     @PostMapping("/refresh-token")
     public ResponseEntity<AuthenticationResponse> refreshToken(
         @RequestBody RefreshTokenRequest refreshRequest
     ) {
-        Pair<AccessToken, RefreshToken> tokens = jwtService.refreshTokens(refreshRequest.getRefreshToken());
-        AccessToken accessToken = tokens.getFirst();
-        RefreshToken refreshToken = tokens.getSecond();
-        return ResponseEntity.ok(
-            AuthenticationResponse.builder()
-                .token(accessToken.getToken())
-                .tokenExpiresIn(accessToken.expiresIn())
-                .refreshToken(refreshToken.getToken().toString())
-                .refreshTokenExpiresIn(refreshToken.expiresIn())
-                .build()
-        );
+        log.info("Request to refresh token with refresh token id {}", refreshRequest.getRefreshToken());
+        AuthenticationResponse authenticationResponse = jwtService.refreshTokens(refreshRequest.getRefreshToken());
+        log.info("Token successfully refresh");
+        return ResponseEntity.ok(authenticationResponse);
     }
 
     @GetMapping("/validate-token")
@@ -66,18 +64,4 @@ public class AuthController {
         return ResponseEntity.ok(jwtService.isTokenValid(token));
     }
 
-    private AuthenticationResponse buildAuthenticationResponse(User registeredUser, Pair<AccessToken, RefreshToken> tokens) {
-        AccessToken accessToken = tokens.getFirst();
-        RefreshToken refreshToken = tokens.getSecond();
-        return
-            AuthenticationResponse.builder()
-                .id(registeredUser.getId())
-                .email(registeredUser.getEmail())
-                .username(registeredUser.getUsername())
-                .token(accessToken.getToken())
-                .tokenExpiresIn(accessToken.expiresIn())
-                .refreshToken(refreshToken.getToken().toString())
-                .refreshTokenExpiresIn(refreshToken.expiresIn())
-                .build();
-    }
 }
